--- a/WivCore/Properties/launchSettings.json
+++ b/WivCore/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "wiv_core": {
+    "WivCore": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": false,
