--- a/WivCoreIntTests/WivCoreIntTests.csproj
+++ b/WivCoreIntTests/WivCoreIntTests.csproj
@@ -10,6 +10,8 @@
         <PackageReference Include="NUnit" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+        <PackageReference Include="Serilog" Version="2.10.1-dev-01265" />
+        <PackageReference Include="Serilog.AspNetCore" Version="3.4.1-dev-00188" />
     </ItemGroup>
 
 </Project>
